# stock-analysis

./: .gitignore  Modelfile  README.md  crew.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
config/: agents.yaml
tools/: calculator_tool.py  sec_tools.py
